[package]
name = "smartcard-reader"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

default-run = "main"

[[bin]]
name = "main"
path = "src/main.rs"

[[bin]]
name = "server"
path = "src/server.rs"

[[bin]]
name = "client"
path = "src/client.rs"


[dependencies]
pcsc = "2.7.0"

tonic = "0.8"
prost = "0.11"
tokio = { version = "1.20.1", features = ["macros", "rt-multi-thread"] }

[build-dependencies]
tonic-build = "0.8"